src/observer/sql/parser/yacc_sql.output
Terminals unused in grammar

    INNER
    JOIN


Grammar

    0 $accept: commands $end

    1 commands: command_wrapper opt_semicolon

    2 command_wrapper: calc_stmt
    3                | select_stmt
    4                | insert_stmt
    5                | update_stmt
    6                | delete_stmt
    7                | create_table_stmt
    8                | drop_table_stmt
    9                | show_tables_stmt
   10                | desc_table_stmt
   11                | create_index_stmt
   12                | drop_index_stmt
   13                | sync_stmt
   14                | begin_stmt
   15                | commit_stmt
   16                | rollback_stmt
   17                | load_data_stmt
   18                | explain_stmt
   19                | set_variable_stmt
   20                | help_stmt
   21                | exit_stmt

   22 exit_stmt: EXIT

   23 help_stmt: HELP

   24 sync_stmt: SYNC

   25 begin_stmt: TRX_BEGIN

   26 commit_stmt: TRX_COMMIT

   27 rollback_stmt: TRX_ROLLBACK

   28 drop_table_stmt: DROP TABLE ID

   29 show_tables_stmt: SHOW TABLES

   30 desc_table_stmt: DESC ID

   31 create_index_stmt: CREATE INDEX ID ON ID LBRACE ID RBRACE

   32 drop_index_stmt: DROP INDEX ID ON ID

   33 create_table_stmt: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE

   34 attr_def_list: ε
   35              | COMMA attr_def attr_def_list

   36 attr_def: ID type LBRACE number RBRACE
   37         | ID type
   38         | attr_def NOT null
   39         | attr_def null

   40 number: NUMBER

   41 type: INT_T
   42     | STRING_T
   43     | FLOAT_T
   44     | DATE_T

   45 insert_stmt: INSERT INTO ID VALUES LBRACE value value_list RBRACE value_lists
   46            | INSERT INTO ID VALUES LBRACE '-' value value_list RBRACE value_lists

   47 value_lists: ε
   48            | COMMA LBRACE value value_list RBRACE value_lists
   49            | COMMA LBRACE '-' value value_list RBRACE value_lists

   50 value_list: ε
   51           | COMMA value value_list
   52           | COMMA '-' value value_list

   53 value: NUMBER
   54      | FLOAT
   55      | SSS
   56      | null

   57 delete_stmt: DELETE FROM ID where

   58 update_stmt: UPDATE ID SET ID EQ value where
   59            | UPDATE ID SET ID EQ '-' value where

   60 select_stmt: SELECT select_attr FROM ID rel_list where group order

   61 calc_stmt: CALC expression_list

   62 expression_list: expression
   63                | expression COMMA expression_list

   64 expression: expression '+' expression
   65           | expression '-' expression
   66           | expression '*' expression
   67           | expression '/' expression
   68           | LBRACE expression RBRACE
   69           | '-' expression
   70           | value
   71           | ID
   72           | ID DOT ID
   73           | agg_func LBRACE ID RBRACE
   74           | agg_func LBRACE ID DOT ID RBRACE
   75           | agg_func LBRACE '*' RBRACE
   76           | agg_func LBRACE number RBRACE

   77 select_attr: '*'
   78            | rel_attr attr_list

   79 rel_attr: expression

   80 attr_list: ε
   81          | COMMA rel_attr attr_list

   82 rel_list: ε
   83         | COMMA ID rel_list

   84 where: ε
   85      | WHERE condition_list

   86 condition_list: ε
   87               | condition
   88               | condition AND condition_list
   89               | ON condition_list

   90 condition: rel_attr comp_op rel_attr

   91 group: ε
   92      | GROUP BY group_item group_list

   93 group_list: ε
   94           | COMMA group_item group_list

   95 group_item: ID
   96           | ID DOT ID

   97 order: ε
   98      | ORDER BY order_condition order_condition_list

   99 order_condition_list: ε
  100                     | COMMA order_condition order_condition_list

  101 order_condition: ID
  102                | ID DOT ID
  103                | ID ASC
  104                | ID DESC
  105                | ID DOT ID ASC
  106                | ID DOT ID DESC

  107 agg_func: MAX
  108         | MIN
  109         | COUNT
  110         | AVG
  111         | SUM

  112 comp_op: EQ
  113        | LT
  114        | GT
  115        | LE
  116        | GE
  117        | NE
  118        | IS
  119        | IS NOT

  120 load_data_stmt: LOAD DATA INFILE SSS INTO TABLE ID

  121 explain_stmt: EXPLAIN command_wrapper

  122 set_variable_stmt: SET ID EQ value
  123                  | SET ID EQ '-' value

  124 opt_semicolon: ε
  125              | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 66 75 77
    '+' (43) 64
    '-' (45) 46 49 52 59 65 69 123
    '/' (47) 67
    error (256)
    SEMICOLON (258) 125
    CREATE (259) 31 33
    DROP (260) 28 32
    TABLE (261) 28 33 120
    TABLES (262) 29
    INDEX (263) 31 32
    CALC (264) 61
    SELECT (265) 60
    SHOW (266) 29
    SYNC (267) 24
    INSERT (268) 45 46
    DELETE (269) 57
    UPDATE (270) 58 59
    LBRACE (271) 31 33 36 45 46 48 49 68 73 74 75 76
    RBRACE (272) 31 33 36 45 46 48 49 68 73 74 75 76
    COMMA (273) 35 48 49 51 52 63 81 83 94 100
    TRX_BEGIN (274) 25
    TRX_COMMIT (275) 26
    TRX_ROLLBACK (276) 27
    INT_T (277) 41
    STRING_T (278) 42
    FLOAT_T (279) 43
    DATE_T (280) 44
    null (281) 38 39 56
    IS (282) 118 119
    NOT (283) 38 119
    HELP (284) 23
    EXIT (285) 22
    DOT (286) 72 74 96 102 105 106
    INTO (287) 45 46 120
    VALUES (288) 45 46
    FROM (289) 57 60
    WHERE (290) 85
    AND (291) 88
    SET (292) 58 59 122 123
    INNER (293)
    JOIN (294)
    ON (295) 31 32 89
    GROUP (296) 92
    ORDER (297) 98
    BY (298) 92 98
    ASC (299) 103 105
    DESC (300) 30 104 106
    LOAD (301) 120
    DATA (302) 120
    INFILE (303) 120
    EXPLAIN (304) 121
    MAX (305) 107
    MIN (306) 108
    AVG (307) 110
    COUNT (308) 109
    SUM (309) 111
    EQ (310) 58 59 112 122 123
    LT (311) 113
    GT (312) 114
    LE (313) 115
    GE (314) 116
    NE (315) 117
    NUMBER <number> (316) 40 53
    FLOAT <floats> (317) 54
    ID <string> (318) 28 30 31 32 33 36 37 45 46 57 58 59 60 71 72 73 74 83 95 96 101 102 103 104 105 106 120 122 123
    SSS <string> (319) 55 120
    UMINUS (320)


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    commands <sql_node> (71)
        on left: 1
        on right: 0
    command_wrapper <sql_node> (72)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 121
    exit_stmt <sql_node> (73)
        on left: 22
        on right: 21
    help_stmt <sql_node> (74)
        on left: 23
        on right: 20
    sync_stmt <sql_node> (75)
        on left: 24
        on right: 13
    begin_stmt <sql_node> (76)
        on left: 25
        on right: 14
    commit_stmt <sql_node> (77)
        on left: 26
        on right: 15
    rollback_stmt <sql_node> (78)
        on left: 27
        on right: 16
    drop_table_stmt <sql_node> (79)
        on left: 28
        on right: 8
    show_tables_stmt <sql_node> (80)
        on left: 29
        on right: 9
    desc_table_stmt <sql_node> (81)
        on left: 30
        on right: 10
    create_index_stmt <sql_node> (82)
        on left: 31
        on right: 11
    drop_index_stmt <sql_node> (83)
        on left: 32
        on right: 12
    create_table_stmt <sql_node> (84)
        on left: 33
        on right: 7
    attr_def_list <attr_infos> (85)
        on left: 34 35
        on right: 33 35
    attr_def <attr_info> (86)
        on left: 36 37 38 39
        on right: 33 35 38 39
    number <number> (87)
        on left: 40
        on right: 36 76
    type <number> (88)
        on left: 41 42 43 44
        on right: 36 37
    insert_stmt <sql_node> (89)
        on left: 45 46
        on right: 4
    value_lists <value_lists> (90)
        on left: 47 48 49
        on right: 45 46 48 49
    value_list <value_list> (91)
        on left: 50 51 52
        on right: 45 46 48 49 51 52
    value <value> (92)
        on left: 53 54 55 56
        on right: 45 46 48 49 51 52 58 59 70 122 123
    delete_stmt <sql_node> (93)
        on left: 57
        on right: 6
    update_stmt <sql_node> (94)
        on left: 58 59
        on right: 5
    select_stmt <sql_node> (95)
        on left: 60
        on right: 3
    calc_stmt <sql_node> (96)
        on left: 61
        on right: 2
    expression_list <expression_list> (97)
        on left: 62 63
        on right: 61 63
    expression <expression> (98)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 62 63 64 65 66 67 68 69 79
    select_attr <rel_attr_list> (99)
        on left: 77 78
        on right: 60
    rel_attr <rel_attr> (100)
        on left: 79
        on right: 78 81 90
    attr_list <rel_attr_list> (101)
        on left: 80 81
        on right: 78 81
    rel_list <relation_list> (102)
        on left: 82 83
        on right: 60 83
    where <condition_list> (103)
        on left: 84 85
        on right: 57 58 59 60
    condition_list <condition_list> (104)
        on left: 86 87 88 89
        on right: 85 88 89
    condition <condition> (105)
        on left: 90
        on right: 87 88
    group <rel_attr_list> (106)
        on left: 91 92
        on right: 60
    group_list <rel_attr_list> (107)
        on left: 93 94
        on right: 92 94
    group_item <rel_attr> (108)
        on left: 95 96
        on right: 92 94
    order <order_condition_list> (109)
        on left: 97 98
        on right: 60
    order_condition_list <order_condition_list> (110)
        on left: 99 100
        on right: 98 100
    order_condition <order_condition> (111)
        on left: 101 102 103 104 105 106
        on right: 98 100
    agg_func <agg_func> (112)
        on left: 107 108 109 110 111
        on right: 73 74 75 76
    comp_op <comp> (113)
        on left: 112 113 114 115 116 117 118 119
        on right: 90
    load_data_stmt <sql_node> (114)
        on left: 120
        on right: 17
    explain_stmt <sql_node> (115)
        on left: 121
        on right: 18
    set_variable_stmt <sql_node> (116)
        on left: 122 123
        on right: 19
    opt_semicolon (117)
        on left: 124 125
        on right: 1


State 0

    0 $accept: • commands $end

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    SHOW          shift, and go to state 5
    SYNC          shift, and go to state 6
    INSERT        shift, and go to state 7
    DELETE        shift, and go to state 8
    UPDATE        shift, and go to state 9
    TRX_BEGIN     shift, and go to state 10
    TRX_COMMIT    shift, and go to state 11
    TRX_ROLLBACK  shift, and go to state 12
    HELP          shift, and go to state 13
    EXIT          shift, and go to state 14
    SET           shift, and go to state 15
    DESC          shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    commands           go to state 19
    command_wrapper    go to state 20
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 1

   31 create_index_stmt: CREATE • INDEX ID ON ID LBRACE ID RBRACE
   33 create_table_stmt: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE

    TABLE  shift, and go to state 41
    INDEX  shift, and go to state 42


State 2

   28 drop_table_stmt: DROP • TABLE ID
   32 drop_index_stmt: DROP • INDEX ID ON ID

    TABLE  shift, and go to state 43
    INDEX  shift, and go to state 44


State 3

   61 calc_stmt: CALC • expression_list

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value            go to state 57
    expression_list  go to state 58
    expression       go to state 59
    agg_func         go to state 60


State 4

   60 select_stmt: SELECT • select_attr FROM ID rel_list where group order

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56
    '*'     shift, and go to state 61

    value        go to state 57
    expression   go to state 62
    select_attr  go to state 63
    rel_attr     go to state 64
    agg_func     go to state 60


State 5

   29 show_tables_stmt: SHOW • TABLES

    TABLES  shift, and go to state 65


State 6

   24 sync_stmt: SYNC •

    $default  reduce using rule 24 (sync_stmt)


State 7

   45 insert_stmt: INSERT • INTO ID VALUES LBRACE value value_list RBRACE value_lists
   46            | INSERT • INTO ID VALUES LBRACE '-' value value_list RBRACE value_lists

    INTO  shift, and go to state 66


State 8

   57 delete_stmt: DELETE • FROM ID where

    FROM  shift, and go to state 67


State 9

   58 update_stmt: UPDATE • ID SET ID EQ value where
   59            | UPDATE • ID SET ID EQ '-' value where

    ID  shift, and go to state 68


State 10

   25 begin_stmt: TRX_BEGIN •

    $default  reduce using rule 25 (begin_stmt)


State 11

   26 commit_stmt: TRX_COMMIT •

    $default  reduce using rule 26 (commit_stmt)


State 12

   27 rollback_stmt: TRX_ROLLBACK •

    $default  reduce using rule 27 (rollback_stmt)


State 13

   23 help_stmt: HELP •

    $default  reduce using rule 23 (help_stmt)


State 14

   22 exit_stmt: EXIT •

    $default  reduce using rule 22 (exit_stmt)


State 15

  122 set_variable_stmt: SET • ID EQ value
  123                  | SET • ID EQ '-' value

    ID  shift, and go to state 69


State 16

   30 desc_table_stmt: DESC • ID

    ID  shift, and go to state 70


State 17

  120 load_data_stmt: LOAD • DATA INFILE SSS INTO TABLE ID

    DATA  shift, and go to state 71


State 18

  121 explain_stmt: EXPLAIN • command_wrapper

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    SHOW          shift, and go to state 5
    SYNC          shift, and go to state 6
    INSERT        shift, and go to state 7
    DELETE        shift, and go to state 8
    UPDATE        shift, and go to state 9
    TRX_BEGIN     shift, and go to state 10
    TRX_COMMIT    shift, and go to state 11
    TRX_ROLLBACK  shift, and go to state 12
    HELP          shift, and go to state 13
    EXIT          shift, and go to state 14
    SET           shift, and go to state 15
    DESC          shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    command_wrapper    go to state 72
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 19

    0 $accept: commands • $end

    $end  shift, and go to state 73


State 20

    1 commands: command_wrapper • opt_semicolon

    SEMICOLON  shift, and go to state 74

    $default  reduce using rule 124 (opt_semicolon)

    opt_semicolon  go to state 75


State 21

   21 command_wrapper: exit_stmt •

    $default  reduce using rule 21 (command_wrapper)


State 22

   20 command_wrapper: help_stmt •

    $default  reduce using rule 20 (command_wrapper)


State 23

   13 command_wrapper: sync_stmt •

    $default  reduce using rule 13 (command_wrapper)


State 24

   14 command_wrapper: begin_stmt •

    $default  reduce using rule 14 (command_wrapper)


State 25

   15 command_wrapper: commit_stmt •

    $default  reduce using rule 15 (command_wrapper)


State 26

   16 command_wrapper: rollback_stmt •

    $default  reduce using rule 16 (command_wrapper)


State 27

    8 command_wrapper: drop_table_stmt •

    $default  reduce using rule 8 (command_wrapper)


State 28

    9 command_wrapper: show_tables_stmt •

    $default  reduce using rule 9 (command_wrapper)


State 29

   10 command_wrapper: desc_table_stmt •

    $default  reduce using rule 10 (command_wrapper)


State 30

   11 command_wrapper: create_index_stmt •

    $default  reduce using rule 11 (command_wrapper)


State 31

   12 command_wrapper: drop_index_stmt •

    $default  reduce using rule 12 (command_wrapper)


State 32

    7 command_wrapper: create_table_stmt •

    $default  reduce using rule 7 (command_wrapper)


State 33

    4 command_wrapper: insert_stmt •

    $default  reduce using rule 4 (command_wrapper)


State 34

    6 command_wrapper: delete_stmt •

    $default  reduce using rule 6 (command_wrapper)


State 35

    5 command_wrapper: update_stmt •

    $default  reduce using rule 5 (command_wrapper)


State 36

    3 command_wrapper: select_stmt •

    $default  reduce using rule 3 (command_wrapper)


State 37

    2 command_wrapper: calc_stmt •

    $default  reduce using rule 2 (command_wrapper)


State 38

   17 command_wrapper: load_data_stmt •

    $default  reduce using rule 17 (command_wrapper)


State 39

   18 command_wrapper: explain_stmt •

    $default  reduce using rule 18 (command_wrapper)


State 40

   19 command_wrapper: set_variable_stmt •

    $default  reduce using rule 19 (command_wrapper)


State 41

   33 create_table_stmt: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE

    ID  shift, and go to state 76


State 42

   31 create_index_stmt: CREATE INDEX • ID ON ID LBRACE ID RBRACE

    ID  shift, and go to state 77


State 43

   28 drop_table_stmt: DROP TABLE • ID

    ID  shift, and go to state 78


State 44

   32 drop_index_stmt: DROP INDEX • ID ON ID

    ID  shift, and go to state 79


State 45

   68 expression: LBRACE • expression RBRACE

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 80
    agg_func    go to state 60


State 46

   56 value: null •

    $default  reduce using rule 56 (value)


State 47

  107 agg_func: MAX •

    $default  reduce using rule 107 (agg_func)


State 48

  108 agg_func: MIN •

    $default  reduce using rule 108 (agg_func)


State 49

  110 agg_func: AVG •

    $default  reduce using rule 110 (agg_func)


State 50

  109 agg_func: COUNT •

    $default  reduce using rule 109 (agg_func)


State 51

  111 agg_func: SUM •

    $default  reduce using rule 111 (agg_func)


State 52

   53 value: NUMBER •

    $default  reduce using rule 53 (value)


State 53

   54 value: FLOAT •

    $default  reduce using rule 54 (value)


State 54

   71 expression: ID •
   72           | ID • DOT ID

    DOT  shift, and go to state 81

    $default  reduce using rule 71 (expression)


State 55

   55 value: SSS •

    $default  reduce using rule 55 (value)


State 56

   69 expression: '-' • expression

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 82
    agg_func    go to state 60


State 57

   70 expression: value •

    $default  reduce using rule 70 (expression)


State 58

   61 calc_stmt: CALC expression_list •

    $default  reduce using rule 61 (calc_stmt)


State 59

   62 expression_list: expression •
   63                | expression • COMMA expression_list
   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression

    COMMA  shift, and go to state 83
    '+'    shift, and go to state 84
    '-'    shift, and go to state 85
    '*'    shift, and go to state 86
    '/'    shift, and go to state 87

    $default  reduce using rule 62 (expression_list)


State 60

   73 expression: agg_func • LBRACE ID RBRACE
   74           | agg_func • LBRACE ID DOT ID RBRACE
   75           | agg_func • LBRACE '*' RBRACE
   76           | agg_func • LBRACE number RBRACE

    LBRACE  shift, and go to state 88


State 61

   77 select_attr: '*' •

    $default  reduce using rule 77 (select_attr)


State 62

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression
   79 rel_attr: expression •

    '+'  shift, and go to state 84
    '-'  shift, and go to state 85
    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 79 (rel_attr)


State 63

   60 select_stmt: SELECT select_attr • FROM ID rel_list where group order

    FROM  shift, and go to state 89


State 64

   78 select_attr: rel_attr • attr_list

    COMMA  shift, and go to state 90

    $default  reduce using rule 80 (attr_list)

    attr_list  go to state 91


State 65

   29 show_tables_stmt: SHOW TABLES •

    $default  reduce using rule 29 (show_tables_stmt)


State 66

   45 insert_stmt: INSERT INTO • ID VALUES LBRACE value value_list RBRACE value_lists
   46            | INSERT INTO • ID VALUES LBRACE '-' value value_list RBRACE value_lists

    ID  shift, and go to state 92


State 67

   57 delete_stmt: DELETE FROM • ID where

    ID  shift, and go to state 93


State 68

   58 update_stmt: UPDATE ID • SET ID EQ value where
   59            | UPDATE ID • SET ID EQ '-' value where

    SET  shift, and go to state 94


State 69

  122 set_variable_stmt: SET ID • EQ value
  123                  | SET ID • EQ '-' value

    EQ  shift, and go to state 95


State 70

   30 desc_table_stmt: DESC ID •

    $default  reduce using rule 30 (desc_table_stmt)


State 71

  120 load_data_stmt: LOAD DATA • INFILE SSS INTO TABLE ID

    INFILE  shift, and go to state 96


State 72

  121 explain_stmt: EXPLAIN command_wrapper •

    $default  reduce using rule 121 (explain_stmt)


State 73

    0 $accept: commands $end •

    $default  accept


State 74

  125 opt_semicolon: SEMICOLON •

    $default  reduce using rule 125 (opt_semicolon)


State 75

    1 commands: command_wrapper opt_semicolon •

    $default  reduce using rule 1 (commands)


State 76

   33 create_table_stmt: CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE

    LBRACE  shift, and go to state 97


State 77

   31 create_index_stmt: CREATE INDEX ID • ON ID LBRACE ID RBRACE

    ON  shift, and go to state 98


State 78

   28 drop_table_stmt: DROP TABLE ID •

    $default  reduce using rule 28 (drop_table_stmt)


State 79

   32 drop_index_stmt: DROP INDEX ID • ON ID

    ON  shift, and go to state 99


State 80

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression
   68           | LBRACE expression • RBRACE

    RBRACE  shift, and go to state 100
    '+'     shift, and go to state 84
    '-'     shift, and go to state 85
    '*'     shift, and go to state 86
    '/'     shift, and go to state 87


State 81

   72 expression: ID DOT • ID

    ID  shift, and go to state 101


State 82

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression
   69           | '-' expression •

    $default  reduce using rule 69 (expression)


State 83

   63 expression_list: expression COMMA • expression_list

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value            go to state 57
    expression_list  go to state 102
    expression       go to state 59
    agg_func         go to state 60


State 84

   64 expression: expression '+' • expression

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 103
    agg_func    go to state 60


State 85

   65 expression: expression '-' • expression

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 104
    agg_func    go to state 60


State 86

   66 expression: expression '*' • expression

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 105
    agg_func    go to state 60


State 87

   67 expression: expression '/' • expression

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 106
    agg_func    go to state 60


State 88

   73 expression: agg_func LBRACE • ID RBRACE
   74           | agg_func LBRACE • ID DOT ID RBRACE
   75           | agg_func LBRACE • '*' RBRACE
   76           | agg_func LBRACE • number RBRACE

    NUMBER  shift, and go to state 107
    ID      shift, and go to state 108
    '*'     shift, and go to state 109

    number  go to state 110


State 89

   60 select_stmt: SELECT select_attr FROM • ID rel_list where group order

    ID  shift, and go to state 111


State 90

   81 attr_list: COMMA • rel_attr attr_list

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    value       go to state 57
    expression  go to state 62
    rel_attr    go to state 112
    agg_func    go to state 60


State 91

   78 select_attr: rel_attr attr_list •

    $default  reduce using rule 78 (select_attr)


State 92

   45 insert_stmt: INSERT INTO ID • VALUES LBRACE value value_list RBRACE value_lists
   46            | INSERT INTO ID • VALUES LBRACE '-' value value_list RBRACE value_lists

    VALUES  shift, and go to state 113


State 93

   57 delete_stmt: DELETE FROM ID • where

    WHERE  shift, and go to state 114

    $default  reduce using rule 84 (where)

    where  go to state 115


State 94

   58 update_stmt: UPDATE ID SET • ID EQ value where
   59            | UPDATE ID SET • ID EQ '-' value where

    ID  shift, and go to state 116


State 95

  122 set_variable_stmt: SET ID EQ • value
  123                  | SET ID EQ • '-' value

    null    shift, and go to state 46
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    SSS     shift, and go to state 55
    '-'     shift, and go to state 117

    value  go to state 118


State 96

  120 load_data_stmt: LOAD DATA INFILE • SSS INTO TABLE ID

    SSS  shift, and go to state 119


State 97

   33 create_table_stmt: CREATE TABLE ID LBRACE • attr_def attr_def_list RBRACE

    ID  shift, and go to state 120

    attr_def  go to state 121


State 98

   31 create_index_stmt: CREATE INDEX ID ON • ID LBRACE ID RBRACE

    ID  shift, and go to state 122


State 99

   32 drop_index_stmt: DROP INDEX ID ON • ID

    ID  shift, and go to state 123


State 100

   68 expression: LBRACE expression RBRACE •

    $default  reduce using rule 68 (expression)


State 101

   72 expression: ID DOT ID •

    $default  reduce using rule 72 (expression)


State 102

   63 expression_list: expression COMMA expression_list •

    $default  reduce using rule 63 (expression_list)


State 103

   64 expression: expression • '+' expression
   64           | expression '+' expression •
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression

    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 64 (expression)


State 104

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   65           | expression '-' expression •
   66           | expression • '*' expression
   67           | expression • '/' expression

    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 65 (expression)


State 105

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   66           | expression '*' expression •
   67           | expression • '/' expression

    $default  reduce using rule 66 (expression)


State 106

   64 expression: expression • '+' expression
   65           | expression • '-' expression
   66           | expression • '*' expression
   67           | expression • '/' expression
   67           | expression '/' expression •

    $default  reduce using rule 67 (expression)


State 107

   40 number: NUMBER •

    $default  reduce using rule 40 (number)


State 108

   73 expression: agg_func LBRACE ID • RBRACE
   74           | agg_func LBRACE ID • DOT ID RBRACE

    RBRACE  shift, and go to state 124
    DOT     shift, and go to state 125


State 109

   75 expression: agg_func LBRACE '*' • RBRACE

    RBRACE  shift, and go to state 126


State 110

   76 expression: agg_func LBRACE number • RBRACE

    RBRACE  shift, and go to state 127


State 111

   60 select_stmt: SELECT select_attr FROM ID • rel_list where group order

    COMMA  shift, and go to state 128

    $default  reduce using rule 82 (rel_list)

    rel_list  go to state 129


State 112

   81 attr_list: COMMA rel_attr • attr_list

    COMMA  shift, and go to state 90

    $default  reduce using rule 80 (attr_list)

    attr_list  go to state 130


State 113

   45 insert_stmt: INSERT INTO ID VALUES • LBRACE value value_list RBRACE value_lists
   46            | INSERT INTO ID VALUES • LBRACE '-' value value_list RBRACE value_lists

    LBRACE  shift, and go to state 131


State 114

   85 where: WHERE • condition_list

    LBRACE  shift, and go to state 45
    null    shift, and go to state 46
    ON      shift, and go to state 132
    MAX     shift, and go to state 47
    MIN     shift, and go to state 48
    AVG     shift, and go to state 49
    COUNT   shift, and go to state 50
    SUM     shift, and go to state 51
    NUMBER  shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    SSS     shift, and go to state 55
    '-'     shift, and go to state 56

    $default  reduce using rule 86 (condition_list)

    value           go to state 57
    expression      go to state 62
    rel_attr        go to state 133
    condition_list  go to state 134
    condition       go to state 135
    agg_func        go to state 60


State 115
